# gmock_tdd_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  run_gcov
Module/: IModule.h  Logic.cpp  Logic.h  Module.cpp  Module.h
test/Module/: MockIModule.h  TestLogic.cpp
